sec10 spacing fix

--- a/style.scss
+++ b/style.scss
@@ -1030,27 +1030,32 @@ main {
         flex-direction: column;
         justify-content: space-around;
         gap: 1rem;
-        input {
-          width: 100%;
-          height: clamp(4rem, 4vw, 4.3rem);
-          border-radius: 0.5rem;
-          border: 1px solid black;
-          padding: 0 1rem;
-          font-size: clamp(1.2rem, 1.5vw, 2rem);
-        }
-        button {
-          width: 100%;
-          padding: 1rem;
-          border-radius: 3rem;
-          border: 1px solid transparent;
-          background-color: #2a264c;
-          color: white;
-          font-size: clamp(1rem, 1.3vw, 2rem);
-          transition: all ease 0.3s;
-          &:hover {
-            border: 1px solid #2a264c;
-            background-color: #feac00;
-            color: black;
+        .input-btn {
+          display: flex;
+          flex-direction: column;
+          gap: 1rem;
+          input {
+            width: 100%;
+            height: clamp(4rem, 4vw, 4.3rem);
+            border-radius: 0.5rem;
+            border: 1px solid black;
+            padding: 0 1rem;
+            font-size: clamp(1.2rem, 1.5vw, 2rem);
+          }
+          button {
+            width: 100%;
+            padding: 1rem;
+            border-radius: 3rem;
+            border: 1px solid transparent;
+            background-color: #2a264c;
+            color: white;
+            font-size: clamp(1rem, 1.3vw, 2rem);
+            transition: all ease 0.3s;
+            &:hover {
+              border: 1px solid #2a264c;
+              background-color: #feac00;
+              color: black;
+            }
           }
         }
         .socials-container {
@@ -1084,7 +1089,7 @@ main {
           padding: 1rem;
           color: white;
           font-family: reckless;
-          
+
           &:nth-last-child(1) {
             border: none;
           }
@@ -1520,6 +1525,7 @@ main {
           gap: 1rem;
           .input-btn {
             width: 60%;
+            flex-direction: row;
             input {
               width: 60%;
               height: 3.5rem;
@@ -1540,8 +1546,8 @@ main {
           grid-template-areas:
             "a b c d . ."
             "e f g . . .";
-            gap: 2rem;
-            padding: 2rem;
+          gap: 2rem;
+          padding: 2rem;
           details:nth-child(1) {
             grid-area: a;
           }
@@ -1571,14 +1577,13 @@ main {
                 display: none;
               }
             }
-            ul{
-
-              li{
+            ul {
+              li {
                 position: relative;
                 width: fit-content;
                 text-wrap-mode: nowrap;
                 cursor: pointer;
-                &::after{
+                &::after {
                   content: "";
                   width: 0%;
                   height: 1px;
@@ -1587,30 +1592,30 @@ main {
                   bottom: 0;
                   left: 0;
                   transition: all ease 0.3s;
+                }
+                &:hover {
+                  color: white;
+                  &::after {
+                    width: 100%;
+                    background-color: white;
+                  }
+                }
               }
-              &:hover {
-                color: white;
-                &::after{
-                width: 100%;
-                background-color: white;
-              }
-              }
-            }
             }
           }
         }
       }
-      .sec10-footer-img{
+      .sec10-footer-img {
         height: 90vh;
         justify-content: space-between;
-        #brand-logo{
+        #brand-logo {
           width: 15rem;
         }
-        #hero-img{
+        #hero-img {
           transform: scale(4);
           bottom: 15rem;
         }
-        p{
+        p {
           width: 25%;
         }
       }
